# vscode-docs

./: .gitignore  CONCEITO_MESTRE.md  DIAGNOSTICO_SISTEMA.md  RELATORIO_LINHA_A_LINHA.md
nexus-universe/core-rust/: Cargo.toml
nexus-universe/core-rust/src/: lib.rs  main.rs  neural_link.rs  plugin_loader.rs
nexus-universe/core-rust/src/abyss/: mod.rs
nexus-universe/core-rust/src/ai/: behavior.rs  mod.rs  npc.rs
nexus-universe/core-rust/src/archetypes/: mod.rs  mount.rs  npc.rs  weapon.rs
nexus-universe/core-rust/src/core/: config.rs  events.rs  game_state.rs
nexus-universe/core-rust/src/economy/: mod.rs
nexus-universe/core-rust/src/military/: commands.rs  mod.rs  units.rs
nexus-universe/core-rust/tests/: rename_tests.rs
operacao-fronteira-unificada/: Cargo.toml
operacao-fronteira-unificada/src/: lib.rs  main.rs
operacao-fronteira-unificada/src/abyss/: economy.rs  fragmenter.rs  military.rs  mod.rs  sandbox.rs  social.rs
operacao-fronteira-unificada/src/archetypes/: base.rs  mod.rs  npc.rs  pet.rs  weapon.rs
operacao-fronteira-unificada/src/core/: game_state.rs  mod.rs
operacao-fronteira-unificada/src/economy/: resources.rs
operacao-fronteira-unificada/src/military/: mod.rs
operacao-fronteira-unificada/src/psychology/: mod.rs
operacao-fronteira-unificada/src/social/: mod.rs
operacao-fronteira-unificada/src/technology/: research.rs
operacao-fronteira-unificada/src/utils/: ghost_manager.rs  mod.rs  registry.rs  save_load.rs
operacao-fronteira-unificada/tests/: cascate_events.rs  ghost_tests.rs  rename_tests.rs
quarantine/: README.md  (+1 more)
(+64 files in other folders)
