[package]
name = "operacao_fronteira_unificada"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tui = "0.19"
crossterm = "0.26"
log = "0.4"
env_logger = "0.10"
lazy_static = "1.4"

[dev-dependencies]
assertables = "5.0"
