[package]
name = "operacao_fronteira_unificada"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.7"
uuid = { version = "1.3", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.10"
dashmap = "5.4" # Para mapas concorrentes de alta performance
anyhow = "1.0"
md5 = "0.7"

[lib]
name = "operacao_fronteira_unificada"
path = "src/lib.rs"
